--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@tanstack/react-form": "^1.28.0",
     "better-auth": "^1.4.18",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.9.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "next-cloudinary": "^6.17.5",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
